# DragonflyX

./: .env.example  .gitignore  LICENSE  Makefile  README.md  cli_help.txt  dns_result.json  dorks.txt  identity_result.json  ip_report.json  paste_results.json  phone_result.json  pyproject.toml  pytest_output.txt  requirements.txt  ruff_full_output.txt  url_result.json
dragonflyX/: __init__.py  cli.py  config.py
dragonflyX/core/: cache.py  exceptions.py  http_client.py  logger.py  rate_limiter.py  validators.py
dragonflyX/modules/: decoders.py  dns_tools.py  dorks_generator.py  identity.py  paste_search.py  phone_intel.py
dragonflyX/modules/hash_check/: __init__.py  schemas.py  service.py
dragonflyX/modules/hash_check/providers/: virustotal.py
dragonflyX/modules/investigation/: __init__.py  detect.py  pivots.py  schemas.py  service.py
dragonflyX/modules/ip_intel/: __init__.py  schemas.py  service.py
dragonflyX/modules/ip_intel/providers/: __init__.py  abuseipdb.py  ipinfo.py  shodan.py  virustotal.py
dragonflyX/modules/url_analysis/: __init__.py  schemas.py  service.py
dragonflyX/modules/url_analysis/providers/: __init__.py  urlscan.py  virustotal.py
dragonflyX/output/: console.py  html_report.py  report.py
study/: ARCHITECTURE.md  CHANGELOG.md
tests/: conftest.py  test_dorks_generator.py  test_hash_check.py  test_investigation_detect.py  test_investigation_service.py  test_ip_intel.py  test_paste_search.py  test_phone_intel.py  test_subdomain_enum.py  test_url_analysis.py  test_validators.py
