[project]
name = "dragonflyX"
version = "1.0.0"
requires-python = ">=3.13"
description = "OSINT + SOC Intelligence CLI Tool"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "diskcache>=5.6",
    "tenacity>=8.2",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "pyfiglet>=1.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
dragonflyx = "dragonflyX.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
